{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 13,
  "lineage": "8945a100-fbec-35ad-b20e-e88592da8379",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:network-acl/acl-076d3b23d891b5fad",
            "default_network_acl_id": "acl-076d3b23d891b5fad",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-076d3b23d891b5fad",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "998461587073",
            "region": "eu-central-1",
            "subnet_ids": [
              "subnet-09b2e7ef09018af52",
              "subnet-0e5e867516f2645f3"
            ],
            "tags": {
              "Name": "11-public-modules-default"
            },
            "tags_all": {
              "Name": "11-public-modules-default"
            },
            "vpc_id": "vpc-0b4c6ac64de569516"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:route-table/rtb-09bd90fd0e107f6d5",
            "default_route_table_id": "rtb-09bd90fd0e107f6d5",
            "id": "rtb-09bd90fd0e107f6d5",
            "owner_id": "998461587073",
            "propagating_vgws": null,
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "11-public-modules-default"
            },
            "tags_all": {
              "Name": "11-public-modules-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b4c6ac64de569516"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:security-group/sg-041684b8ef3ef38eb",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-041684b8ef3ef38eb",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "998461587073",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "11-public-modules-default"
            },
            "tags_all": {
              "Name": "11-public-modules-default"
            },
            "vpc_id": "vpc-0b4c6ac64de569516"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:internet-gateway/igw-06c86eaeac0cad78f",
            "id": "igw-06c86eaeac0cad78f",
            "owner_id": "998461587073",
            "region": "eu-central-1",
            "tags": {
              "Name": "11-public-modules"
            },
            "tags_all": {
              "Name": "11-public-modules"
            },
            "vpc_id": "vpc-0b4c6ac64de569516"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "igw-06c86eaeac0cad78f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06c86eaeac0cad78f",
            "id": "r-rtb-06d33a3b36190136a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-06d33a3b36190136a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-06d33a3b36190136a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:route-table/rtb-05af440e1672635ae",
            "id": "rtb-05af440e1672635ae",
            "owner_id": "998461587073",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "11-public-modules-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "11-public-modules-private-eu-central-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c6ac64de569516"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "rtb-05af440e1672635ae",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:route-table/rtb-06d33a3b36190136a",
            "id": "rtb-06d33a3b36190136a",
            "owner_id": "998461587073",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "11-public-modules-public"
            },
            "tags_all": {
              "Name": "11-public-modules-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c6ac64de569516"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "rtb-06d33a3b36190136a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099475c46dcb7ea32",
            "region": "eu-central-1",
            "route_table_id": "rtb-05af440e1672635ae",
            "subnet_id": "subnet-09b2e7ef09018af52"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "rtbassoc-099475c46dcb7ea32",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2d2e0c0644eeaea",
            "region": "eu-central-1",
            "route_table_id": "rtb-06d33a3b36190136a",
            "subnet_id": "subnet-0e5e867516f2645f3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "rtbassoc-0a2d2e0c0644eeaea",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:subnet/subnet-09b2e7ef09018af52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b2e7ef09018af52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998461587073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "11-public-modules-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "11-public-modules-private-eu-central-1a"
            },
            "vpc_id": "vpc-0b4c6ac64de569516"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "subnet-09b2e7ef09018af52",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:subnet/subnet-0e5e867516f2645f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5e867516f2645f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998461587073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "11-public-modules-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "11-public-modules-public-eu-central-1a"
            },
            "vpc_id": "vpc-0b4c6ac64de569516"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "subnet-0e5e867516f2645f3",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998461587073:vpc/vpc-0b4c6ac64de569516",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076d3b23d891b5fad",
            "default_route_table_id": "rtb-09bd90fd0e107f6d5",
            "default_security_group_id": "sg-041684b8ef3ef38eb",
            "dhcp_options_id": "dopt-0cd29bc8fc646bbe2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4c6ac64de569516",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09bd90fd0e107f6d5",
            "owner_id": "998461587073",
            "region": "eu-central-1",
            "tags": {
              "Name": "11-public-modules"
            },
            "tags_all": {
              "Name": "11-public-modules"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998461587073",
            "id": "vpc-0b4c6ac64de569516",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}